# cosmos-migration-guide

./: .gitignore  README.md  migration-guide.md
example-counter-contract-rewrite/: README.md
example-counter-contract-rewrite/anchor/: Anchor.toml
example-counter-contract-rewrite/anchor/programs/counter/: Cargo.toml
example-counter-contract-rewrite/anchor/programs/counter/src/: lib.rs
example-counter-contract-rewrite/cosmwasm/: Cargo.toml
example-counter-contract-rewrite/cosmwasm/src/: lib.rs
example-escrow-contracts/: README.md
example-escrow-contracts/anchor/: Anchor.toml
example-escrow-contracts/anchor/programs/counter/: Cargo.toml
example-escrow-contracts/anchor/programs/escrow/: Cargo.toml
example-escrow-contracts/anchor/programs/escrow/src/: lib.rs
example-escrow-contracts/anchor/programs/escrow/tests/: escrow_litesvm.rs
example-escrow-contracts/cosmwasm/: Cargo.toml
example-escrow-contracts/cosmwasm/src/: lib.rs
example-escrow-contracts/pinocchio/: Cargo.toml
example-escrow-contracts/pinocchio/src/: lib.rs
example-escrow-contracts/pinocchio/tests/: escrow_litesvm.rs
example-escrow-contracts/scripts/: build-anchor.sh  build-pinocchio.sh
example-merkle-token-claimer/: Anchor.toml  README.md  package-lock.json  package.json
example-merkle-token-claimer/programs/merkle-tree-token-claimer/: Cargo.toml
example-merkle-token-claimer/programs/merkle-tree-token-claimer/src/: lib.rs
example-merkle-token-claimer/programs/merkle-tree-token-claimer/tests/: merkle_tree_token_claimer_litesvm.rs
example-merkle-token-claimer/scripts/: README.md  address-mapping.md  generate-merkle-tree.ts  sample-snapshot.json
example-merkle-token-claimer/tests/: merkle-tree-token-claimer.ts
