[package]
name = "escrow-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_pinocchio"

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.11.1", default-features = false, features = ["cpi"] }
pinocchio-associated-token-account = "0.4.0"
pinocchio-token = "0.6.0"
