[package]
name = "escrow-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_pinocchio"

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.11.1", default-features = false, features = ["cpi"] }
pinocchio-associated-token-account = "0.4.0"
pinocchio-token = "0.6.0"

[dev-dependencies]
litesvm = "0.11.0"
litesvm-utils = "0.4.0"
solana-account = "^3"
solana-instruction = "^3"
solana-keypair = "^3"
solana-native-token = "^3"
solana-pubkey = "4.2.0"
solana-sdk-ids = "^3"
solana-signer = "^3"
spl-associated-token-account-client = "2.0.0"
spl-token = "9.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
