[package]
name = "merkle-tree-token-claimer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_tree_token_claimer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
sha2 = "0.10"

[dev-dependencies]
anchor-lang = "1.0.0"
anchor-litesvm = "0.4.0"
solana-instruction = "^3"
solana-keypair = "^3"
solana-native-token = "^3"
solana-pubkey = "4.2.0"
solana-sdk-ids = "^3"
solana-signer = "^3"
spl-associated-token-account = "7.0.0"
spl-associated-token-account-client = "2.0.0"
spl-token = "9.0.0"
