[package]
name = "escrow"
version = "0.1.0"
description = "Token escrow program for Solana using Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
anchor-lang = "1.0.0"
anchor-litesvm = "0.4.0"
litesvm-utils = "0.4.0"
solana-instruction = "^3"
solana-keypair = "^3"
solana-native-token = "^3"
solana-sdk-ids = "^3"
solana-signer = "^3"
spl-associated-token-account-client = "2.0.0"
spl-token = "9.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
